--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,179 +1,14 @@
-@import 'mediaquries';
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+@import 'variabler';
 
-#login_background {
-    background: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-    width: 100vw;
-    height: 100vh;
+@import 'menu';
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@import 'login';
 
-#login_box {
-    background: #35394a;
-    width: 350px;
-    height: 450px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+@import 'dashboard'; 
 
-    .foobar_logo {
-        background-image: url("../img/foobar_logo.svg");
-        background-repeat: no-repeat;
-        width: 200px;
-        height: 75px;
-        margin: 0 auto;
-        margin-top: 40px;
-    }
-
-    h4 {
-        margin-top: 60px;
-        text-transform: uppercase;
-        color: white;
-        text-align: center;
-        margin-bottom: 10px;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 700;
-    }
-
-    #login_info {
-        width: 350px;
-        height: 100px;
-
-        .username, .password {
-            width: 100%;
-            height: 50px;
-            background: #323648;
-            border: 2px solid #393d50;
-
-            display: grid;
-            grid-template-columns: 50px 1fr;
-
-            input {
-                background: none;
-                border: 0px;
-                color: white;
-
-                &:focus {
-                    color: #fff;
-                }
-            }
-
-            .login_icon {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                i {
-                    font-size: 25px;
-                    color: white;
-                }
-            }
-        }
-    }
-
-    .submit {
-        width: 200px;
-        height: 50px;
-        margin: 0 auto;
-        margin-top: 30px;
-        
-        border: 2px solid transparent;
-        -moz-border-image: -moz-linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-        -webkit-border-image: -webkit-linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-        border-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-        border-image-slice: 1;
-
-        text-transform: uppercase;
-        color: white;
-        text-align: center;
-        padding: 12px;
-        font-family: 'Open Sans', sans-serif;
-
-        &:hover {
-            border: 2px solid transparent;
-            background:#f09819;
-        }
-    }
-
-    .viewDashboard {
-        display: none;
-
-        width: 200px;
-        height: 50px;
-        margin: 0 auto;
-        margin-top: 60px;
-        
-        border: 2px solid transparent;
-        -moz-border-image: -moz-linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-        -webkit-border-image: -webkit-linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-        border-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-        border-image-slice: 1;
-
-        text-transform: uppercase;
-        color: white;
-        text-align: center;
-        padding: 12px;
-        font-family: 'Open Sans', sans-serif;
-
-        &:hover {
-            border: 2px solid transparent;
-            background:#f09819;
-        }
-
-        a {
-            text-decoration: none;
-            color: #fff;
-        }
-    }
-
-    .spinner{
-        display: none;
-        width: 80px;
-        height: 80px;
-        
-        border: 2px solid #f3f3f3;
-        border-top:3px solid #f25a41;
-        border-radius: 100%;
-        
-        position: absolute;
-        top:0;
-        bottom:0;
-        left:0;
-        right: 0;
-        margin: auto;
-        
-        animation: spin 1s infinite linear;
-    }
-    
-    @keyframes spin {
-        from{
-            transform: rotate(0deg);
-        }to{
-            transform: rotate(360deg);
-        }
-    }
-
-    .done {
-        width: 100px;
-        height: 100px;
-        background-color: #21cd92;
-        border-radius: 50%;
-        margin: 60px 80px 0px 120px;
-        display: none;
-
-        i {
-            font-size: 35px;
-            color: white;
-            padding: 34px;
-
-        }
-
-    }
-
-};
+@import 'mediaquries';
