--- a/source/css/_dashboard.scss
+++ b/source/css/_dashboard.scss
@@ -3,7 +3,7 @@
     width: 100vw;
     background: $dashboard_background;
     display: grid;
-} 
+}     
 
 .top_nav {     
            
@@ -32,9 +32,6 @@
     text-align: center;
     margin: auto;
     margin-top: 30px;
-  }
-  
-  .logo b{
       font-size: 45px;
       font-family: $timeFont;
     color: #fee;
@@ -76,14 +73,54 @@
       text-shadow: inherit;
     }
   }
- 
+   
 #dashboard_wrapper {
     padding: 20px;
 
     display: grid;
     grid-gap: 20px;
    }
-     
+
+   
+// QUE 
+.que_grid_wrapper {
+    box-shadow: $boxShadow;
+    background: $darkBackground;
+    border-radius: 10px;
+    color: white;
+
+    .que {
+            width: 100%;
+            padding: 10px;
+            text-align: center;
+            font-size: 20px;
+            text-transform: uppercase;
+            color: $lightTextColor ;
+            font-family: $HeadFont;
+    }
+
+    #que_reciever {
+        padding: 0 0 0px 0;
+        margin-top: 30px;
+    }
+
+    svg {
+        stroke: $OrangeLight;
+
+        .st0 {
+            stroke: white;
+            fill: white;
+            font-family: $PrimaryFont;
+            font-size: 5px;
+        }
+    }
+
+
+
+
+}
+
+
 .box {
     box-shadow: $boxShadow;
     background: $lightBackground;
@@ -159,6 +196,7 @@
     color: $lightTextColor ;
     font-family: $HeadFont;
     border-radius: 10px;
+    box-shadow: $boxShadow;
 }
 
     #customerOrder_reciever {
@@ -173,7 +211,7 @@
             background: $greyBackground;
 
             display: grid;
-            grid-template-columns: 15px 40px 1fr 1fr;
+            grid-template-columns: 15px 5px 1fr 1fr;
 
             .color_order {
                 background: $darkBackground;
@@ -183,25 +221,74 @@
 
             .order_id {
                 font-family: $HeadFont;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 25px;
             }
 
             .order_info {
                 grid-column: 3/5;
                 font-family: $PrimaryFont;
             }
+
+            .paid_img {
+                grid-column: 4/5;
+                padding: 10px;
+                align-self: center;
+                margin-left: 40px;
+
+                img {
+                    width: 101px;
+                }
+            }
+
+            .beers {
+                padding: 10px;
+                display: flex;
+                img {
+                    width: auto;
+                height: 100px;
+                margin-right: 5px;
+                }
+            }
+
             
-            
-        }
+        } 
     }
 
 
-
-
-#beerInfo_reciever {
-    
+.beer_heading {
+    width: 100%;
+    height: 50px;
+    background: $OrangeLight;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: $lightTextColor ;
+    font-family: $HeadFont;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    box-shadow: $boxShadow;
+}
+ 
+#beerInfo_reciever { 
+    display: grid;
+    grid-gap: 25px;
+      
         .beer_wrapper {
+            box-shadow: $boxShadow;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
+            background-blend-mode: screen;
 
             .beer_img {
+                padding-top: 15px;
+                height: 190px;
 
                 img {
                     width: 40px;
@@ -209,13 +296,172 @@
             }
 
                     .beer_info {
+                        text-align: center;
+                        display: flex;
+                        flex-direction: column;
+                        height: 200px;
+                        margin-bottom: 20px;
+                        justify-content: space-between;
+                        font-family: $PrimaryFont;
 
+                        .beer_name {
+                            text-transform: uppercase;
+                            font-size: 22px;
+                        }
+
+                        .beer_description {
+                            font-size: 15px;
+                        }
 
                                 .beer_details {
                                     width: 100px;
-                                    height: 20px;
-                                    background:$OrangeLight;
+                                    height: 30px;
+                                    align-self: center;        
+                                    border: 2px solid transparent;
+                                    border-image: $orangeGradient;
+                                    border-image-slice: 1;
+
+                                    text-transform: uppercase;
+                                    text-align: center;
+                                    padding: 2px;
+                                    font-family: $PrimaryFont;
+
+                                    &:hover {
+                                        border: 2px solid transparent;
+                                        background:$OrangeLight;
+                                        color: $lightTextColor;
+                                    }
                                 }
                     }
         }
+}
+.message_grid_wrapper {
+    
+
+            .message_wrapper {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap:  15px;
+                
+
+                        .message_box {
+                            box-shadow: $boxShadow;
+                            display: grid;
+                            grid-template-columns: 180px 1fr;
+                            padding: 15px;
+                            font-family: $PrimaryFont;
+                            background: $lightBackground;
+
+
+                            .crew_img {
+                                display: flex;
+                                justify-content: center;
+                                flex-direction: column;
+                                align-items: center;
+                        
+                                    img {
+                                        width: 60%;
+                                        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 2px;
+                                        border-radius: 50%;
+                                    }
+                             }
+
+                             .message_wrap {
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: space-between;
+
+                                h2 {font-family: $HeadFont;
+                                    font-size: 23px;}
+
+                                .read_more {
+                                    width: 130px;
+                                    color: #f3f3f3;
+                                    background: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
+                                    text-transform: uppercase;
+                                    text-align: center;
+                                    padding: 2px;
+                                    font-family: "Open Sans", sans-serif;
+                                    margin-bottom: 15px;
+                                    margin-top: 15px;
+                                }
+                             }
+
+                        }
+            }
+}
+
+.slideOut {
+    animation: 1s ease-out slideOut;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translatex(0);
+  }
+  100% {
+    transform: translatex(-200%);
+  }
+}
+  
+
+#storage_reciever {
+    margin-top: 15px;
+
+.storage_wrapper {
+            font-family: $PrimaryFont;
+
+            text-align: center;
+            justify-content: space-between;
+
+            box-shadow: $boxShadow;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+            
+
+                    .storage_name {
+                        font-size: 18px;
+                        margin-top: 15px;
+                        text-transform: uppercase;
+                        margin-bottom: 15px;
+                    }
+
+                    .storage_mount {
+                        font-size: 22px;
+                        font-weight: 800;
+                    }
+
+                        .storage_box {
+                            width: 110px;
+                            align-self: center;
+
+                            img {
+                                width: 100%;
+                            }
+                        }
+
+                        .storage_now {
+                            width: 100px;
+                                    align-self: center;        
+                                    color: $lightTextColor;
+                                    background: $orangeGradient;
+
+                                    text-transform: uppercase;
+                                    text-align: center;
+                                    padding: 2px;
+                                    font-family: $PrimaryFont;
+                                    margin-bottom: 15px;
+                                    margin-top: 15px;
+
+                                    &:hover {
+                                        background:$OrangeLight;
+                                        color: $lightTextColor;
+                                    }
+                        }
+
+}
 }
