--- a/source/css/_variabler.scss
+++ b/source/css/_variabler.scss
@@ -3,13 +3,15 @@ $orangeGradient: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
 // $dashboard_background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 // $dashboard_background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 // $dashboard_background: linear-gradient(to top, #dfe9f3 0%, white 100%);
-$dashboard_background: #f8f9fb;
+// $dashboard_background: #f8f9fb;
+$dashboard_background: #fbfcfe;
 
 // $boxShadow: 0 0 10px rgba(0, 0, 0, 0.4);
 // $boxShadow: 0 2px 0 rgba(0, 0, 0, .1);
 $boxShadow: 0 0 5px 2px rgba(0,0,0,.10);
 $boxShadowRight: 4px 0 2px -2px rgba(0,0,0,0.1);
 
+$graphColor: #303030;
 
 $lightTextColor: #f3f3f3;
 $darkTextColor: #35394a;
