--- a/source/css/_mediaquries.scss
+++ b/source/css/_mediaquries.scss
@@ -59,7 +59,7 @@
     .que_grid_wrapper {
         grid-column: 1/3;
     }
-    
+      
     .tabs_grid_wrapper {
         grid-column: 2/4;
     }
@@ -90,8 +90,13 @@
     }
 
 
-
-
+        
+                .modal_order_kegs {
+                    width: 600px;
+                    height: 200px;
+                    border-radius: 10px;
+                    
+                }
 
 }
 
