--- a/source/css/_dashboard.scss
+++ b/source/css/_dashboard.scss
@@ -294,7 +294,7 @@
                     width: 40px;
                 }
             }
-
+ 
                     .beer_info {
                         text-align: center;
                         display: flex;
@@ -306,11 +306,12 @@
 
                         .beer_name {
                             text-transform: uppercase;
-                            font-size: 22px;
+                            // font-size: 22px;
+                            font-size: 15px;
                         }
 
                         .beer_description {
-                            font-size: 15px;
+                            font-size: 12px;
                         }
    
                                 .beer_details {
@@ -371,7 +372,11 @@
                                 justify-content: space-between;
 
                                 h2 {font-family: $HeadFont;
-                                    font-size: 23px;}
+                                    font-size: 17px;}
+
+                                    p {
+                                        font-size: 12px;
+                                    }
 
                                 .read_more {
                                     width: 130px;
@@ -671,6 +676,7 @@
     z-index: 1000;
     visibility: hidden;
     font-family: $PrimaryFont;
+
 
             .div_modal_wrapper {
                 background-color: $lightBackground;
