--- a/source/css/_dashboard.scss
+++ b/source/css/_dashboard.scss
@@ -327,7 +327,7 @@
                                     font-family: $PrimaryFont;
 
                                     &:hover {
-                                        border: 2px solid transparent;
+                                        // border: 2px solid transparent;
                                         background:$OrangeLight;
                                         color: $lightTextColor;
                                     }
@@ -686,7 +686,7 @@
                 z-index: 500;
 
                 .top_information_img {
-                    width: 60px;
+                    width: 40px;
                 }
                 img {
                     width: 100%
@@ -699,15 +699,18 @@
 
                 .bold {
                     font-weight: 800;
+                    font-size: 12px;
                 }
 
                 p {
                     font-weight: 100;
+                    font-size: 10px;
                 }
-
-                h2 {
+ 
+                h2, h3 {
                     font-family: $HeadFont;
-                }
+                    font-size: 18px;
+                } 
 
                 .luk {
                     border-radius: 0;
